assets/css/style.scss
---
---

@import "jekyll-theme-slate";

p {
    overflow-wrap:break-word;
    word-wrap:break-word;
}

body, header, footer, #header_wrap, #footer_wrap {
    background: #44004e
}

#forkme_banner {
    background: none;
    right: 150px;
    box-shadow: none;
    color: #00a0cc;
    font-weight: inherit;
    font-family: Arial;
    padding: 16px;
}
#forkme_banner:hover {
  background-color: #800080;
}

h1, h2 {
    color: #5200c6
}

a {
    color: #00a0cc
}

strong {
    color:#44004e
}

footer p {
    color: #c0c0c0
}

footer a {
    color: #00a0cc
}

.missing_translation {
    opacity: 0.75;
}

.missing_translation a {
    opacity: 0.75;
}
.outdated_warning {
  color: white;
  background-color: #ff9600;
  text-align:center;
  padding: 10px;
  border-radius: 6px;
}
.outdated_warning a {
  color: #44004e;
}

.toc_warning {
  float: right;
}
.toc_warning::before {
  content: "⚠️ ";
}

pre {
    padding: 0px;
    box-shadow: none;
}

.side_image {
  float: right;
  width: 50%;
  margin-left: 8px;
  padding: 0px;
}

.inline_image {
  margin: 0;
  padding: 0;
  border: 0;
  box-shadow: none;
}

table {
  border:none;
  border-collapse: separate;
}
th {
  background:#44004e;
}
td {
  border: solid black;
  border-width: 1px 0px 0px 0px;
}
.info_table {
  background: #d6f6ff;
  border-collapse: collapse;
}
.info_table td {
  border-color: #006988;
  padding: 0px 10px;
  border-width: 1px 0px;
}
.info_table td:first-child {
  white-space: nowrap;
}

/* The container <div> - needed to position the dropdown content */
.dropdown_menu {
  position: absolute;
  right: 10px;
  top: 0;
  display: inline-grid;
  pointer-events: none;
}
/* Dropdown Button */
.dropdown_button {
  background-color: transparent;
  color: #00a0cc;
  padding: 16px;
  font-size: 16px;
  border: none;
  display: inline-block;
  pointer-events: auto;
}
/* Dropdown Content (Hidden by Default) */
.dropdown_content {
  border-top: 1px solid #00a0cc;
  display: inline-block;
  background-color: #800080;
  z-index: 1;
  visibility: hidden;
  pointer-events: none;
}
/* Links inside the dropdown */
.dropdown_content a {
  color: #00a0cc;
  padding: 12px 16px;
  text-decoration: none;
  display: block;
}
.dropdown_content a:hover {background-color: #5200c6;color:white;}
.dropdown_menu:hover .dropdown_content {visibility: visible;pointer-events: auto;}
.dropdown_menu:hover .dropdown_button {background-color: #800080;}

/* Emphasize current language in Language selector */
.en:lang(en), .es:lang(es), .zh:lang(zh), .ja:lang(ja), .it:lang(it), .id:lang(id), .pt:lang(pt), .ru:lang(ru) {
    font-weight: bold;
    color:white;
}

/* Back to top button */
#back_to_top_button {
  display: none;
  position: fixed;
  bottom: 20px;
  right: 30px;
  z-index: 99;
  font-size: 24px;
  border: none;
  outline: none;
  background-color: #5200c6;
  color: white;
  cursor: pointer;
  padding: 15px;
  border-radius: 4px;
}
#back_to_top_button:hover {
  background-color: #800080;
}

/* Glossary tooltips */
.tooltip {
  position: relative;
  display: inline-block;
  text-decoration: underline; // IExplorer
  text-decoration: underline dotted #800080 1px;
  cursor: help;
}
.tooltip:hover {
  text-decoration: underline solid #800080 1px;
}
.tooltip .tooltiptext {
  visibility: hidden;
  width: 0px;
  overflow: hidden;
  background-color: #44004e;
  color: #c0c0c0;
  text-align: left;
  border: 1px solid white;
  border-radius: 6px;
  padding: 5px;
  position: absolute;
  z-index: 1;
  bottom: 100%;
  left: 50%;
}
.tooltip .tooltiptext strong {
  color: white;
}
.tooltip .tooltiptext code {
  color: white;
  background-color: #800080;
}
.tooltip:hover .tooltiptext {
  visibility: visible;
}

.glossary_category {
  font-size: small;
  color: gray;
}
.glossary_top_row {
  border-top: 1px solid gray;
}
.glossary_bottom_row {
  border-top: none;
}
.glossary_bottom_row.glossary_term {
  visibility: hidden;
}
.glossary_separator {
  display: block;
  border-bottom: 1px solid gray
}

